--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "db:push": "npx drizzle-kit push",
-    "db:studio": "npx drizzle-kit studio"
+    "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.4",
+    "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
     "@neondatabase/serverless": "^0.10.4",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.40.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "react": "^19.0.0",
@@ -35,6 +35,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.30.5",
+    "prisma": "^6.5.0",
     "tailwindcss": "^4",
     "tsx": "^4.19.3",
     "typescript": "^5"
