--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hook-speech-to-text": "^0.8.0",
     "react-hot-toast": "^2.5.2",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^3.0.2",
