--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.54.2",
     "react-hook-speech-to-text": "^0.8.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
